# lz4util

./: Cargo.toml  Readme.md
src/: main.rs
